[gd_scene load_steps=10 format=3 uid="uid://b27p6dhsoiwp1"]

[ext_resource type="Script" path="res://material_maker/panels/paint/select_mask_dialog.gd" id="1"]
[ext_resource type="Script" path="res://material_maker/tools/obj_loader/obj_loader.gd" id="2"]
[ext_resource type="Shader" path="res://material_maker/panels/paint/select_mask_dialog.gdshader" id="2_w5qxl"]

[sub_resource type="Shader" id="4"]
code = "shader_type canvas_item;

uniform sampler2D idmap;
uniform vec4      color;
uniform float mm_chunk_size = 1.0;
uniform vec2 mm_chunk_offset = vec2(0.0);

void fragment() {
	vec3 id = texture(idmap, mm_chunk_offset+mm_chunk_size*UV).rgb;
	COLOR = vec4(vec3(step(length(id-color.rgb), 0.05)), 1.0);
}
"

[sub_resource type="ShaderMaterial" id="5"]
shader = SubResource("4")
shader_parameter/color = null
shader_parameter/mm_chunk_size = 1.0
shader_parameter/mm_chunk_offset = Vector2(0, 0)

[sub_resource type="World3D" id="World3D_j8v88"]

[sub_resource type="BoxMesh" id="1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bpkvw"]
render_priority = 0
shader = ExtResource("2_w5qxl")

[sub_resource type="Environment" id="6"]
background_mode = 1
background_color = Color(0.501961, 0.501961, 0.501961, 1)

[node name="SelectMask" type="Window"]
size = Vector2i(300, 200)
script = ExtResource("1")
genmask_material = SubResource("5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="IdMapLabel" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "ID Map:"

[node name="IdMapFile" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "ID Map file"

[node name="ShowIdMap" type="CheckBox" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Show ID Map"

[node name="ShowMask" type="CheckBox" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Show Mask"

[node name="ShowMix" type="CheckBox" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Show Mix"

[node name="Reset" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Reset Mask"

[node name="SubViewportContainer" type="SubViewportContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SubViewport" type="SubViewport" parent="VBoxContainer/HBoxContainer/SubViewportContainer"]
own_world_3d = true
world_3d = SubResource("World3D_j8v88")
handle_input_locally = false
size = Vector2i(100, 100)
render_target_update_mode = 4

[node name="MeshPivot" type="Node3D" parent="VBoxContainer/HBoxContainer/SubViewportContainer/SubViewport"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="VBoxContainer/HBoxContainer/SubViewportContainer/SubViewport/MeshPivot"]
mesh = SubResource("1")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("ShaderMaterial_bpkvw")

[node name="CameraPivot" type="Node3D" parent="VBoxContainer/HBoxContainer/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="VBoxContainer/HBoxContainer/SubViewportContainer/SubViewport/CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)
environment = SubResource("6")
far = 50.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/SubViewportContainer"]
visible = false
layout_mode = 2
flip_v = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4

[node name="OK" type="Button" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(55, 0)
layout_mode = 2
text = "OK"

[node name="Cancel" type="Button" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(55, 0)
layout_mode = 2
text = "Cancel"

[node name="ObjLoader" type="Node" parent="."]
script = ExtResource("2")

[connection signal="size_changed" from="." to="." method="_on_size_changed"]
[connection signal="minimum_size_changed" from="VBoxContainer" to="." method="_on_VBoxContainer_minimum_size_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/IdMapFile" to="." method="_on_IdMapFile_pressed"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/VBoxContainer/ShowIdMap" to="." method="_on_Show_item_selected" binds= [0]]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/VBoxContainer/ShowMask" to="." method="_on_Show_item_selected" binds= [1]]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/VBoxContainer/ShowMix" to="." method="_on_Show_item_selected" binds= [2]]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Reset" to="." method="_on_Reset_pressed"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/SubViewportContainer" to="." method="_on_ViewportContainer_gui_input"]
[connection signal="resized" from="VBoxContainer/HBoxContainer/SubViewportContainer" to="." method="_on_ViewportContainer_resized"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/OK" to="." method="_on_OK_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Cancel" to="." method="_on_Cancel_pressed"]
